[project]
name = "ahmcon"
version = "0.1.0"
description = "Python3 bindings to the AHM TCP/IP Protocol Firmware V1.4 as used in the Allen & Heath AHM-series"
authors = [
    { name = "David Huss", email = "dh@atoav.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ahmcon"]

[project.scripts]
"example" = "ahmcon:ahm.example"